Update index.html novas politicas

--- a/politica-privacidade/index.html
+++ b/politica-privacidade/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Política de Privacidade · Quinta dos Avós Lourenço</title>
-  <meta name="description" content="Política de Privacidade da Quinta dos Avós Lourenço">
+  <meta name="description" content="Política de Privacidade da Quinta dos Avós Lourenço (RGPD). Informação sobre tratamento de dados pessoais, cookies e direitos dos titulares.">
 
   <!-- ✅ CSP alinhada com o site -->
   <meta http-equiv="Content-Security-Policy"
@@ -21,105 +21,168 @@
         ">
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
-  <!-- ✅ Caminho absoluto -->
+  <!-- ✅ Caminho absoluto para o CSS do site -->
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+  <!-- Cabeçalho / Navegação -->
   <header class="topbar">
     <div class="brand">
-      <a href="/"><img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo"></a>
+      <a href="/">
+        <img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+      </a>
     </div>
     <nav class="menu" aria-label="Navegação principal">
       <a href="/">Início</a>
       <a href="/sobre/">Sobre</a>
       <a href="/galeria/">Galeria</a>
       <a href="/contactos/">Contactos</a>
+      <a href="/reservas/">Reservas</a>
     </nav>
   </header>
 
+  <!-- Conteúdo principal -->
   <main class="container section">
     <h1>Política de Privacidade</h1>
-    <p>Última atualização: 8 de outubro de 2025</p>
+    <p><em>Última atualização: 2 de novembro de 2025</em></p>
 
-    <h2>1. Quem somos</h2>
-    <p><strong>Quinta dos Avós Lourenço</strong> — Alojamento local (AL nº 135447/AL) na Sertã, Portugal.</p>
-    <p>Contactos do responsável pelo tratamento de dados (Responsável/Encarregado):<br>
-      Email: <a href="mailto:geral@quintadosavoslourenco.pt">geral@quintadosavoslourenco.pt</a><br>
+    <h2>1. Responsável pelo tratamento</h2>
+    <p>
+      <strong>Quinta dos Avós Lourenço</strong> (AL n.º 135447/AL), Sertã, Portugal.<br>
+      Email: <a href="mailto:geral@quintadosavoslourenço.pt">geral@quintadosavoslourenço.pt</a><br>
       Telefone/WhatsApp: <a href="https://wa.me/351960446713" target="_blank" rel="noopener noreferrer">+351 960 446 713</a><br>
-      Morada: Rua da Cascalheira, Sertã, Portugal
+      Morada: Rua da Cascalheira, 6100-000 Sertã, Portugal
     </p>
 
-    <h2>2. Que dados pessoais recolhemos e porquê</h2>
-    <p>O nosso site é estático (HTML/CSS/JS) e <strong>não utiliza cookies de rastreamento</strong> nem analítica de terceiros.</p>
+    <h2>2. Âmbito</h2>
+    <p>
+      A presente política descreve como tratamos dados pessoais recolhidos através deste website
+      (HTML/CSS/JS estático em <strong>GitHub Pages</strong>), por contacto direto (email/telefone/WhatsApp)
+      e via plataformas de reserva de terceiros (p. ex., <strong>Airbnb</strong> e <strong>Booking</strong>).
+    </p>
+
+    <h2>3. Categorias de dados e finalidades</h2>
     <ul>
-      <li><strong>Contactos e reservas:</strong> se entrar em contacto connosco por email/telefone/WhatsApp, poderemos tratar
-        nome, email, telefone e conteúdo da mensagem para responder ao seu pedido.</li>
-      <li><strong>Plataformas de reserva:</strong> se reservar através de <em>terceiros</em> (por exemplo, Airbnb ou Booking),
-        esses serviços enviam-nos os dados necessários à gestão da reserva. Por favor consulte as políticas desses serviços.</li>
-      <li><strong>Registos legais de alojamento:</strong> quando aplicável, poderemos recolher os dados exigidos por lei
-        (por exemplo, identificação para fins de registo de hóspedes) ao abrigo da legislação portuguesa.</li>
+      <li><strong>Pedidos e reservas (website):</strong> nome, email, telefone, datas de estadia, nº de hóspedes,
+        mensagem e informação relevante à reserva — para <em>responder</em> e <em>gerir</em> o seu pedido.</li>
+      <li><strong>Contactos diretos:</strong> informação que nos envia por email/telefone/WhatsApp — para
+        <em>responder</em> e <em>acompanhar</em> o contacto.</li>
+      <li><strong>Plataformas externas (Airbnb/Booking):</strong> recebemos dos terceiros os dados necessários
+        à <em>gestão da reserva</em>. Consulte as respetivas políticas.</li>
+      <li><strong>Obrigações legais AL:</strong> quando aplicável, dados de identificação para registo de hóspedes e
+        faturação, nos termos da lei portuguesa.</li>
+      <li><strong>Cookies essenciais:</strong> apenas os estritamente necessários (ex.: lembrar aceitação de cookies).</li>
     </ul>
 
-    <h2>3. Bases legais do tratamento</h2>
+    <h2>4. Bases legais (art. 6.º RGPD)</h2>
     <ul>
-      <li><strong>Execução de contrato e diligências pré-contratuais</strong> (art. 6.º, n.º 1, al. b) RGPD): gerir pedidos e reservas.</li>
-      <li><strong>Obrigação legal</strong> (art. 6.º, n.º 1, al. c) RGPD): cumprimento de requisitos legais aplicáveis ao alojamento.</li>
-      <li><strong>Interesse legítimo</strong> (art. 6.º, n.º 1, al. f) RGPD): assegurar a segurança do site e prevenir abuso.</li>
-      <li><strong>Consentimento</strong> (art. 6.º, n.º 1, al. a) RGPD): apenas quando necessário, por exemplo para cookies não essenciais (se algum dia forem usados).</li>
+      <li><strong>Execução de contrato/diligências pré-contratuais</strong> (al. b): resposta a pedidos e gestão de reservas.</li>
+      <li><strong>Obrigação legal</strong> (al. c): registos legais de alojamento e obrigações fiscais.</li>
+      <li><strong>Interesse legítimo</strong> (al. f): segurança do website e prevenção de abuso.</li>
+      <li><strong>Consentimento</strong> (al. a): apenas quando necessário (ex.: cookies não essenciais, se vierem a existir).</li>
     </ul>
 
-    <h2>4. Partilha de dados com terceiros</h2>
-    <p>Não vendemos os seus dados. Poderemos partilhar dados apenas quando necessário com:</p>
+    <h2>5. Destinatários e subcontratantes</h2>
+    <p>Não vendemos dados pessoais. Poderemos partilhar apenas quando necessário com:</p>
     <ul>
-      <li><strong>Plataformas de reserva</strong> (à escolha do hóspede): 
+      <li><strong>Prestadores técnicos</strong> (subcontratantes):
+        <ul>
+          <li><strong>GitHub Pages</strong> (hospedagem do site) — poderá implicar transferência internacional. Consulte <a href="https://docs.github.com/pt/site-policy/privacy-policies/github-privacy-statement" target="_blank" rel="noopener noreferrer">Política de Privacidade GitHub</a>.</li>
+          <li><strong>Formspree</strong> (processamento de formulários) — processa os dados submetidos no formulário de reservas; consulte <a href="https://formspree.io/legal/privacy-policy" target="_blank" rel="noopener noreferrer">Política de Privacidade Formspree</a>.</li>
+        </ul>
+      </li>
+      <li><strong>Plataformas de reserva (terceiros à escolha do hóspede):</strong>
         <a href="https://www.airbnb.pt/help/article/2855" target="_blank" rel="noopener noreferrer">Airbnb – Privacidade</a>,
         <a href="https://www.booking.com/content/privacy.pt-pt.html" target="_blank" rel="noopener noreferrer">Booking – Privacidade</a>.
       </li>
-      <li><strong>Autoridades públicas</strong> quando a lei assim o exigir.</li>
-      <li><strong>Fornecedores de alojamento do site</strong> (GitHub Pages) para disponibilização técnica do website.</li>
+      <li><strong>Autoridades públicas</strong> quando exigido por lei.</li>
     </ul>
 
-    <h2>5. Cookies</h2>
-    <p><strong>Atualmente:</strong> apenas usamos cookies/armazenamento local estritamente necessários ao funcionamento (por exemplo, para recordar a sua aceitação do aviso de cookies). Não utilizamos cookies de análise ou marketing.</p>
-    <p>Se, no futuro, introduzirmos analítica (por ex., Google Analytics) ou integrações que criem cookies não essenciais, exibiremos um <strong>banner de consentimento</strong> permitindo aceitar/recusar antes de ativar esses recursos, e atualizaremos esta política.</p>
+    <h2>6. Transferências internacionais</h2>
+    <p>
+      Alguns prestadores (p. ex., GitHub Pages e/ou Formspree) podem localizar-se fora do EEE. Nesses casos,
+      procuramos assegurar garantias adequadas (ex.: <em>Standard Contractual Clauses</em> da UE) e medidas suplementares.
+      Pode solicitar mais informação através do contacto indicado no ponto 1.
+    </p>
 
-    <h2>6. Conservação dos dados</h2>
+    <h2>7. Conservação</h2>
     <ul>
-      <li><strong>Contactos e reservas:</strong> durante o tempo necessário para gestão da reserva e obrigações legais (por regra até 2 anos, salvo prazos legais superiores).</li>
-      <li><strong>Faturação/registos legais:</strong> pelos prazos exigidos por lei.</li>
+      <li><strong>Pedidos e reservas:</strong> pelo período necessário à gestão da reserva e obrigações legais (regra geral, até 2 anos, salvo prazos legais superiores).</li>
+      <li><strong>Faturação e registos legais:</strong> durante os prazos legalmente exigidos.</li>
+      <li><strong>Cookies essenciais:</strong> pelo tempo estritamente necessário à função (ex.: lembrança do consentimento).</li>
     </ul>
 
-    <h2>7. Os seus direitos</h2>
-    <p>Ao abrigo do RGPD, tem os direitos de <strong>acesso</strong>, <strong>retificação</strong>, <strong>eliminação</strong>, <strong>limitação</strong>, <strong>oposição</strong> e <strong>portabilidade</strong> (quando aplicável). Também pode retirar o consentimento quando o tratamento se basear nele.</p>
-    <p>Para exercer os seus direitos, contacte: <a href="mailto:geral@quintadosavoslourenco.pt">geral@quintadosavoslourenco.pt</a>. Tem ainda o direito de apresentar reclamação à <a href="https://www.cnpd.pt/" target="_blank" rel="noopener noreferrer">CNPD</a>.</p>
+    <h2>8. Cookies</h2>
+    <p>
+      Utilizamos apenas <strong>cookies/armazenamento local essenciais</strong> ao funcionamento do site
+      (como o registo da aceitação do aviso de cookies). Não utilizamos, no momento, cookies de analítica,
+      marketing ou perfis. Se viermos a introduzir cookies não essenciais, será apresentado um
+      <strong>banner de consentimento</strong> prévio, com possibilidade de aceitar/recusar, e esta política será atualizada.
+    </p>
 
-    <h2>8. Segurança</h2>
-    <p>Aplicamos medidas técnicas e organizativas adequadas para proteger os dados pessoais, incluindo utilização de HTTPS, políticas de segurança no navegador (CSP) e princípio da minimização de dados.</p>
+    <h2>9. Direitos dos titulares</h2>
+    <p>
+      Nos termos do RGPD, pode exercer os direitos de <strong>acesso</strong>, <strong>retificação</strong>,
+      <strong>eliminação</strong>, <strong>limitação</strong>, <strong>oposição</strong> e <strong>portabilidade</strong> (quando aplicável).
+      Pode ainda <strong>retirar o consentimento</strong> quando o tratamento se basear nele, sem comprometer a licitude do tratamento
+      realizado com base no consentimento previamente prestado.
+    </p>
+    <p>
+      Para exercer os seus direitos, contacte: <a href="mailto:geral@quintadosavoslourenço.pt">geral@quintadosavoslourenço.pt</a>.
+      Tem também o direito de apresentar reclamação junto da <a href="https://www.cnpd.pt/" target="_blank" rel="noopener noreferrer">CNPD</a>.
+    </p>
 
-    <h2>9. Ligações para terceiros</h2>
-    <p>O nosso site contém ligações para serviços externos (por ex., Airbnb, Booking, WhatsApp). Não controlamos esses sites; recomendamos a leitura das respetivas políticas de privacidade.</p>
+    <h2>10. Segurança</h2>
+    <p>
+      Aplicamos medidas técnicas e organizativas adequadas à proteção dos dados pessoais, incluindo uso de <strong>HTTPS</strong>,
+      políticas de segurança no navegador (CSP), minimização de dados e restrição de acessos.
+      Apesar destas medidas, nenhum sistema é totalmente imune; recomendamos que não envie informação sensível desnecessária por canais não cifrados.
+    </p>
 
-    <h2>10. Menores</h2>
-    <p>Não recolhemos intencionalmente dados de menores sem o consentimento dos titulares de responsabilidades parentais quando exigido por lei.</p>
+    <h2>11. Ligações e serviços de terceiros</h2>
+    <p>
+      O nosso site inclui ligações para serviços externos (p. ex., <strong>Airbnb</strong>, <strong>Booking</strong> e <strong>WhatsApp</strong>).
+      Esses serviços são regidos pelas respetivas políticas de privacidade; recomendamos a sua leitura antes de fornecer dados pessoais nessas plataformas.
+    </p>
 
-    <h2>11. Alterações a esta política</h2>
-    <p>Poderemos atualizar esta política para refletir mudanças legais ou operacionais. A versão publicada no site indica sempre a data da última atualização.</p>
+    <h2>12. Menores</h2>
+    <p>
+      Não recolhemos, de forma intencional, dados de menores de 18 anos sem o consentimento válido dos titulares das responsabilidades parentais, quando exigido por lei.
+    </p>
 
-    <hr>
-    <p>Se tiver dúvidas sobre esta política, contacte-nos: <a href="mailto:geral@quintadosavoslourenco.pt">geral@quintadosavoslourenco.pt</a>.</p>
+    <h2>13. Alterações à política</h2>
+    <p>
+      Esta política poderá ser atualizada para refletir alterações legais ou operacionais. A versão publicada indica sempre a data da última atualização.
+    </p>
+
+    <p>Para qualquer questão relacionada com esta política, contacte-nos através de <a href="mailto:geral@quintadosavoslourenço.pt">geral@quintadosavoslourenço.pt</a>.</p>
   </main>
 
+  <!-- Rodapé -->
   <footer class="footer">
     <p>
       © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
       <a href="/politica-privacidade/">Política de Privacidade</a> ·
-      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
-        Livro de Reclamações
-      </a>
+      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">Livro de Reclamações</a>
     </p>
   </footer>
 
+  <!-- (Opcional) Banner de cookies, caso uses /js/cookies.js nesta página -->
+  <!--
+  <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
+    <div class="cookie-inner">
+      <p class="cookie-text">
+        Usamos cookies apenas para garantir o bom funcionamento do site.
+        <a href="/politica-privacidade/">Saiba mais</a>
+      </p>
+      <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
+    </div>
+  </div>
+  -->
+
   <!-- Scripts -->
+  <!-- Mantém apenas o que usas. Se tiveres o banner de cookies aqui, inclui também /js/cookies.js -->
+  <!-- <script defer src="/js/cookies.js"></script> -->
   <script defer src="/js/app.js"></script>
 </body>
 </html>
