Update index.html novo

--- a/termos-e-condicoes/index.html
+++ b/termos-e-condicoes/index.html
@@ -1,1 +1,183 @@
+<!doctype html>
+<html lang="pt">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Termos e Condições · Quinta dos Avós Lourenço</title>
+  <meta name="description" content="Termos e Condições de reserva e utilização do alojamento Quinta dos Avós Lourenço (AL 135447/AL).">
+
+  <!-- ✅ CSP alinhada com o site -->
+  <meta http-equiv="Content-Security-Policy"
+        content="
+          default-src 'self';
+          script-src 'self';
+          style-src  'self' 'unsafe-inline';
+          img-src    'self' data:;
+          font-src   'self' data:;
+          connect-src 'self';
+          base-uri   'self';
+          form-action 'self';
+          upgrade-insecure-requests;
+        ">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+
+  <!-- ✅ Caminho absoluto para o CSS do site -->
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+  <!-- Cabeçalho / Navegação -->
+  <header class="topbar">
+    <div class="brand">
+      <a href="/">
+        <img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+      </a>
+    </div>
+    <nav class="menu" aria-label="Navegação principal">
+      <a href="/">Início</a>
+      <a href="/sobre/">Sobre</a>
+      <a href="/galeria/">Galeria</a>
+      <a href="/contactos/">Contactos</a>
+      <a href="/reservas/">Reservas</a>
+    </nav>
+  </header>
+
+  <!-- Conteúdo principal -->
+  <main class="container section">
+    <h1>Termos e Condições</h1>
+    <p><em>Última atualização: 2 de novembro de 2025</em></p>
+
+    <h2>1. Identificação do Alojamento</h2>
+    <p>
+      <strong>Quinta dos Avós Lourenço</strong> — Alojamento Local, AL n.º 135447/AL, Sertã, Portugal.<br>
+      Email: <a href="mailto:geral@quintadosavoslourenço.pt">geral@quintadosavóslourenço.pt</a><br>
+      Telefone/WhatsApp: <a href="https://wa.me/351960446713" target="_blank" rel="noopener noreferrer">+351 960 446 713</a>
+    </p>
+
+    <h2>2. Objeto e Âmbito</h2>
+    <p>
+      Os presentes Termos e Condições regulam as reservas, a utilização do alojamento e demais serviços
+      disponibilizados pela Quinta dos Avós Lourenço, diretamente neste website (HTML/CSS/JS
+      hospedado em GitHub Pages) ou por intermédio de plataformas de terceiros (p. ex., Airbnb e Booking).
+    </p>
+
+    <h2>3. Reservas</h2>
+    <ol>
+      <li><strong>Pedido de reserva:</strong> pode ser efetuado através do formulário do site (processado pelo prestador
+        Formspree) ou por contacto direto (email/telefone/WhatsApp). As reservas via plataformas externas
+        regem-se, adicionalmente, pelos termos dessas plataformas.</li>
+      <li><strong>Confirmação:</strong> a reserva considera-se confirmada apenas após mensagem expressa de confirmação
+        enviada pela Quinta dos Avós Lourenço (email/WhatsApp) com detalhe de datas, nº de hóspedes, preço e
+        eventuais condições específicas.</li>
+      <li><strong>Dados corretos:</strong> o hóspede compromete-se a fornecer informação verdadeira e completa,
+        responsabilizando-se por dados incorretos que afetem a reserva.</li>
+    </ol>
+
+    <h2>4. Preços, Pagamentos e Cauções</h2>
+    <ol>
+      <li><strong>Preços:</strong> os preços são indicados em euros (€) e incluem, salvo indicação em contrário,
+        impostos legalmente aplicáveis.</li>
+      <li><strong>Pagamento:</strong> as condições (sinal, prazos e meios) são comunicadas na confirmação.
+        Reservas através de plataformas externas seguem os respetivos métodos de pagamento.</li>
+      <li><strong>Caução:</strong> poderá ser solicitada caução reembolsável para cobrir danos ou incumprimentos,
+        a qual será devolvida após verificação do estado do alojamento.</li>
+    </ol>
+
+    <h2>5. Cancelamento, Não Comparência e Alterações</h2>
+    <ol>
+      <li><strong>Cancelamento:</strong> salvo política específica em contrário, os pedidos de cancelamento devem ser
+        comunicados por escrito (email/WhatsApp) e confirmados pela Quinta dos Avós Lourenço. Poderão aplicar-se taxas
+        conforme a antecedência.</li>
+      <li><strong>No-show:</strong> a não comparência na data de check-in sem aviso prévio poderá implicar a cobrança total
+        da primeira noite ou do valor acordado, conforme política comunicada.</li>
+      <li><strong>Alterações:</strong> alterações de datas, nº de hóspedes ou serviços ficam sujeitas a disponibilidade e
+        eventual ajuste de preço.</li>
+      <li><strong>Plataformas externas:</strong> reservas feitas em Airbnb/Booking regem-se também pelas respetivas políticas
+        de cancelamento/alteração.</li>
+    </ol>
+
+    <h2>6. Check-in, Check-out e Estadia</h2>
+    <ol>
+      <li><strong>Check-in:</strong> entre as <strong>16:00 e 22:00</strong>, salvo combinação prévia.</li>
+      <li><strong>Check-out:</strong> até às <strong>11:00</strong>, salvo combinação prévia.</li>
+      <li><strong>Capacidade:</strong> a ocupação máxima é a indicada na confirmação. A presença de hóspedes adicionais
+        requer autorização e poderá implicar custos.</li>
+      <li><strong>Identificação:</strong> se aplicável, poderá ser solicitada documentação para cumprimento de obrigações legais
+        de registo de hóspedes.</li>
+      <li><strong>Regras de convivência:</strong> silêncio e respeito pelos vizinhos; proibição de festas sem autorização;
+        adequado uso dos equipamentos; proibição de fumar no interior; não são permitidos animais salvo acordo prévio.</li>
+      <li><strong>Limpeza e danos:</strong> o alojamento deve ser mantido em bom estado. Danos, extravios ou sujidade anómala
+        poderão ser debitados.</li>
+    </ol>
+
+    <h2>7. Responsabilidade</h2>
+    <ol>
+      <li><strong>Do alojamento:</strong> envidamos esforços razoáveis para garantir a conformidade do imóvel e dos serviços.
+        Não seremos responsáveis por interrupções de fornecimentos essenciais (água, energia, telecomunicações) alheias ao nosso controlo,
+        nem por incidentes resultantes de uso indevido das instalações.</li>
+      <li><strong>Do hóspede:</strong> o hóspede responde por danos causados por si, acompanhantes ou visitantes ao imóvel,
+        recheio, equipamentos e áreas comuns.</li>
+      <li><strong>Bens pessoais:</strong> a Quinta dos Avós Lourenço não se responsabiliza por perda, furto ou dano de bens
+        pessoais não imputáveis a conduta dolosa ou negligente do alojamento.</li>
+    </ol>
+
+    <h2>8. Força Maior</h2>
+    <p>
+      Nenhuma das partes é responsável por incumprimentos motivados por eventos de força maior (p. ex., fenómenos
+      naturais, atos de autoridade, greves, falhas generalizadas de serviços essenciais), devendo a parte afetada
+      informar a outra logo que possível.
+    </p>
+
+    <h2>9. Plataforma do Website e Serviços de Terceiros</h2>
+    <ol>
+      <li><strong>Website:</strong> hospedado em <em>GitHub Pages</em>. A utilização do site pode implicar transferências
+        internacionais de dados por parte do prestador. Consulte a <a href="https://docs.github.com/pt/site-policy/privacy-policies/github-privacy-statement" target="_blank" rel="noopener noreferrer">Política de Privacidade GitHub</a>.</li>
+      <li><strong>Formulário de reservas:</strong> processado por <em>Formspree</em>, que recebe e encaminha os dados do seu
+        pedido. Consulte a <a href="https://formspree.io/legal/privacy-policy" target="_blank" rel="noopener noreferrer">Política de Privacidade Formspree</a>.</li>
+      <li><strong>Plataformas externas:</strong> <em>Airbnb</em> e <em>Booking</em> aplicam os seus próprios termos e políticas.
+        Recomendamos a sua leitura antes de reservar através dessas plataformas.</li>
+      <li><strong>WhatsApp:</strong> mensagens trocadas via WhatsApp seguem as políticas do serviço.</li>
+    </ol>
+
+    <h2>10. Privacidade e Proteção de Dados</h2>
+    <p>
+      O tratamento de dados pessoais rege-se pela nossa <a href="/politica-privacidade/">Política de Privacidade</a>,
+      que complementa estes Termos para tudo o que respeite a licitude, transparência, direitos dos titulares,
+      conservação e segurança dos dados.
+    </p>
+
+    <h2>11. Reclamações e Livro de Reclamações</h2>
+    <p>
+      Em caso de insatisfação, contacte-nos para tentarmos resolver de forma célere. Dispomos de
+      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">Livro de Reclamações eletrónico</a>.
+    </p>
+
+    <h2>12. Lei Aplicável e Foro</h2>
+    <p>
+      Os presentes Termos regem-se pela lei portuguesa. Para resolução de litígios emergentes, quando não seja possível
+      acordo, é competente o foro da comarca da Sertã, com renúncia a qualquer outro, sem prejuízo das normas imperativas aplicáveis.
+    </p>
+
+    <h2>13. Alterações</h2>
+    <p>
+      A Quinta dos Avós Lourenço poderá atualizar estes Termos para refletir alterações legais ou operacionais. A versão em vigor
+      é a publicada neste endereço, com a data da última atualização indicada no topo.
+    </p>
+
+    <p>Para qualquer questão sobre estes Termos, contacte: <a href="mailto:geral@quintadosavoslourenço.pt">geral@quintadosavoslourenço.pt</a>.</p>
+  </main>
+
+  <!-- Rodapé -->
+  <footer class="footer">
+    <p>
+      © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
+      <a href="/politica-privacidade/">Política de Privacidade</a> ·
+      <a href="/termos-e-condicoes/">Termos e Condições</a> ·
+      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">Livro de Reclamações</a>
+    </p>
+  </footer>
+
+  <!-- Scripts (mantém apenas o necessário) -->
+  <script defer src="/js/app.js"></script>
+</body>
+</html>
 
