--- a/cookies/index.html
+++ b/cookies/index.html
@@ -96,19 +96,16 @@ qdalConsent.accepted(); // devolve true/false
     </p>
   </footer>
 
-  <!-- (Opcional) Se quiseres mostrar o banner também nesta página, inclui o markup abaixo e o script -->
-  <!--
-  <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
-    <div class="cookie-inner">
-      <p class="cookie-text">
-        Usamos cookies apenas para garantir o bom funcionamento do site.
-        <a href="/cookies/">Saiba mais</a>
-      </p>
-      <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
-    </div>
+ <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
+  <div class="cookie-inner">
+    <p class="cookie-text">
+      Usamos cookies apenas para garantir o bom funcionamento do site.
+      <a href="/cookies/" id="cookie-more">Saber mais</a>
+    </p>
+    <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
   </div>
-  <script defer src="/js/cookies.js"></script>
-  -->
+</div>
+<script defer src="/js/cookies.js"></script>
 
   <script defer src="/js/app.js"></script>
 </body>
