--- a/cookies/index.html
+++ b/cookies/index.html
@@ -92,21 +92,25 @@ qdalConsent.accepted(); // devolve true/false
       © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
       <a href="/politica-privacidade/">Política de Privacidade</a> ·
       <a href="/termos-e-condicoes/">Termos e Condições</a> ·
-      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">Livro de Reclamações</a>
+      <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">
+        Livro de Reclamações
+      </a>
     </p>
   </footer>
 
- <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
-  <div class="cookie-inner">
-    <p class="cookie-text">
-      Usamos cookies apenas para garantir o bom funcionamento do site.
-      <a href="/cookies/" id="cookie-more">Saber mais</a>
-    </p>
-    <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
+  <!-- Banner de Cookies -->
+  <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden tabindex="-1" style="outline:none;">
+    <div class="cookie-inner">
+      <p class="cookie-text">
+        Usamos cookies apenas para garantir o bom funcionamento do site.
+        <a href="/cookies/index.html" id="cookie-more">Saber mais</a>
+      </p>
+      <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
+    </div>
   </div>
-</div>
-<script defer src="/js/cookies.js"></script>
 
+  <!-- Scripts -->
+  <script defer src="/js/cookies.js"></script>
   <script defer src="/js/app.js"></script>
 </body>
 </html>
