--- a/reservas/index.html
+++ b/reservas/index.html
@@ -134,6 +134,7 @@
     <p>
       © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
       <a href="/politica-privacidade/">Política de Privacidade</a> ·
+      <a href="/termos-e-condicoes/">Termos e Condições</a> ·
       <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">Livro de Reclamações</a>
     </p>
   </footer>
