Update 404.html atualiza rodape

--- a/404.html
+++ b/404.html
@@ -61,10 +61,13 @@
 
   <!-- Rodapé -->
   <footer class="footer">
-    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
-       <a href="politica-privacidade.html">Política de Privacidade</a>
-    </p>
-  </footer>
+  <p>
+    © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
+    <a href="/politica-privacidade/">Política de Privacidade</a> ·
+    <a href="/termos-e-condicoes/">Termos e Condições</a> ·
+    <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">Livro de Reclamações</a>
+  </p>
+</footer>
 
   <!-- WhatsApp flutuante -->
   <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o."
