--- a/404.html
+++ b/404.html
@@ -33,10 +33,11 @@
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
     <nav class="menu" aria-label="Navegação principal">
-      <a href="index.html">Início</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="galeria.html">Galeria</a>
-      <a href="contactos.html">Contactos</a>
+      <a href="/">Início</a>
+      <a href="/sobre/">Sobre</a>
+      <a href="/galeria/">Galeria</a>
+      <a href="/contactos/">Contactos</a>
+      <a href="/reservas/">Reservas</a>
     </nav>
   </header>
 
