Update index.html 1

--- a/cookies/index.html
+++ b/cookies/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Aviso de Cookies · Quinta dos Avós Lourenço</title>
-  <meta name="description" content="Aviso de Cookies da Quinta dos Avós Lourenço: usamos apenas armazenamento local essencial para lembrar a sua aceitação.">
+  <title>Política de Cookies · Quinta dos Avós Lourenço</title>
+  <meta name="description" content="Política de Cookies da Quinta dos Avós Lourenço. Saiba como usamos cookies para garantir o bom funcionamento do site.">
 
-  <!-- CSP alinhada com o site -->
+  <!-- ✅ CSP alinhada com o site -->
   <meta http-equiv="Content-Security-Policy"
         content="
           default-src 'self';
@@ -21,13 +21,15 @@
         ">
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
+  <!-- ✅ Caminho absoluto -->
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <!-- Cabeçalho -->
   <header class="topbar">
     <div class="brand">
-      <a href="/"><img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo"></a>
+      <a href="/">
+        <img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+      </a>
     </div>
     <nav class="menu" aria-label="Navegação principal">
       <a href="/">Início</a>
@@ -38,55 +40,55 @@
     </nav>
   </header>
 
-  <!-- Conteúdo -->
   <main class="container section">
-    <h1>Aviso de Cookies</h1>
-    <p><em>Última atualização: 2 de novembro de 2025</em></p>
+    <h1>Política de Cookies</h1>
+    <p><strong>Última atualização:</strong> 2 de novembro de 2025</p>
 
-    <h2>1. O que usamos</h2>
+    <h2>1. O que são cookies</h2>
     <p>
-      Este website utiliza exclusivamente <strong>armazenamento local essencial</strong> no seu navegador para
-      <strong>memorizar a aceitação do banner de cookies</strong>. Não utilizamos cookies de analítica, marketing
-      ou perfis, nem carregamos scripts de terceiros que definam cookies.
+      Cookies são pequenos ficheiros de texto armazenados no seu dispositivo (computador, telemóvel ou tablet)
+      quando visita determinados websites. Servem para melhorar a experiência do utilizador e garantir o bom funcionamento do site.
     </p>
 
-    <h2>2. Detalhes técnicos</h2>
+    <h2>2. Que cookies usamos</h2>
+    <p>
+      O site da <strong>Quinta dos Avós Lourenço</strong> utiliza apenas <strong>cookies estritamente necessários</strong>
+      ao seu funcionamento técnico. Estes cookies não recolhem dados pessoais nem permitem identificar o visitante.
+    </p>
+
     <ul>
-      <li><strong>Chave de consentimento:</strong> <code>qdal-consent-v1</code> (armazenada em <em>localStorage</em>)</li>
-      <li><strong>Finalidade:</strong> recordar que já aceitou o aviso de cookies para não o mostrar novamente</li>
-      <li><strong>Duração:</strong> até o utilizador apagar o armazenamento local do navegador ou a chave ser alterada</li>
-      <li><strong>Conteúdo:</strong> valor booleano <code>"true"</code> (sem identificação pessoal)</li>
+      <li><strong>cookie-consent</strong> — guarda a sua preferência de aceitação de cookies, evitando mostrar o banner novamente.</li>
+      <li><strong>cookies funcionais</strong> — garantem a operação correta do site (por exemplo, navegação e layout responsivo).</li>
     </ul>
 
-    <h2>3. Como gerir</h2>
-    <p>
-      Pode apagar este registo através das definições do seu navegador (limpar dados do site/armazenamento local) ou,
-      se pretender testar, usando o atalho disponibilizado pelo site:
-    </p>
-    <pre style="padding:12px;border:1px solid #eee;border-radius:8px;background:#fafafa;overflow:auto">
-/* console do navegador */
-qdalConsent.reset();   // volta a mostrar o banner
-qdalConsent.accepted(); // devolve true/false
-    </pre>
+    <h2>3. Não utilizamos</h2>
+    <ul>
+      <li>Cookies de análise (ex.: Google Analytics);</li>
+      <li>Cookies de publicidade ou marketing;</li>
+      <li>Cookies de rastreamento de terceiros.</li>
+    </ul>
 
-    <h2>4. WhatsApp e ligações externas</h2>
+    <h2>4. Gestão de cookies</h2>
     <p>
-      O botão flutuante de WhatsApp abre uma ligação externa para <em>wa.me</em>. Ao utilizar serviços externos
-      (p. ex., Airbnb, Booking, WhatsApp), aplicam-se as respetivas políticas de privacidade e cookies. Recomendamos
-      a leitura dessas políticas antes de fornecer dados nessas plataformas.
+      Pode apagar ou bloquear cookies a qualquer momento através das definições do seu navegador.
+      No entanto, isso poderá afetar o funcionamento correto de algumas funcionalidades do site.
     </p>
 
-    <h2>5. Alterações futuras</h2>
     <p>
-      Se, no futuro, introduzirmos <strong>cookies não essenciais</strong> (por exemplo, analítica),
-      será apresentado um <strong>banner de consentimento</strong> com opção de aceitar/recusar antes de ativar esses recursos,
-      e este aviso será atualizado em conformidade.
+      Se pretender alterar a sua escolha, pode <a href="#" onclick="window.qdalConsent.reset(); return false;">reabrir o banner de cookies</a>
+      para aceitar novamente.
     </p>
 
-    <p>Para mais informação, consulte a nossa <a href="/politica-privacidade/">Política de Privacidade</a>.</p>
+    <h2>5. Alterações a esta política</h2>
+    <p>
+      Esta política poderá ser atualizada periodicamente para refletir alterações legais ou técnicas.
+      A data de última atualização encontra-se indicada no início desta página.
+    </p>
+
+    <hr>
+    <p>Para mais informações sobre privacidade, consulte a nossa <a href="/politica-privacidade/">Política de Privacidade</a>.</p>
   </main>
 
-  <!-- Rodapé -->
   <footer class="footer">
     <p>
       © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
@@ -98,7 +100,7 @@ qdalConsent.accepted(); // devolve true/false
     </p>
   </footer>
 
-  <!-- Banner de Cookies -->
+  <!-- Banner de cookies -->
   <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden tabindex="-1" style="outline:none;">
     <div class="cookie-inner">
       <p class="cookie-text">
@@ -109,7 +111,6 @@ qdalConsent.accepted(); // devolve true/false
     </div>
   </div>
 
-  <!-- Scripts -->
   <script defer src="/js/cookies.js"></script>
   <script defer src="/js/app.js"></script>
 </body>
