Update index.html  2

--- a/cookies/index.html
+++ b/cookies/index.html
@@ -101,17 +101,17 @@
   </footer>
 
   <!-- Banner de cookies -->
-  <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden tabindex="-1" style="outline:none;">
-    <div class="cookie-inner">
-      <p class="cookie-text">
-        Usamos cookies apenas para garantir o bom funcionamento do site.
-        <a href="/cookies/index.html" id="cookie-more">Saber mais</a>
-      </p>
-      <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
-    </div>
+ <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden tabindex="-1" style="outline:none;">
+  <div class="cookie-inner">
+    <p class="cookie-text">
+      Usamos cookies apenas para garantir o bom funcionamento do site.
+      <a href="#" id="cookie-more">Saber mais</a>
+    </p>
+    <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
   </div>
+</div>
+<script defer src="/js/cookies.js"></script>
 
-  <script defer src="/js/cookies.js"></script>
   <script defer src="/js/app.js"></script>
 </body>
 </html>
