Update index.html 1

--- a/cookies/index.html
+++ b/cookies/index.html
@@ -105,13 +105,12 @@
   <div class="cookie-inner">
     <p class="cookie-text">
       Usamos cookies apenas para garantir o bom funcionamento do site.
-      <a href="#" id="cookie-more">Saber mais</a>
+      <a href="/cookies/" id="cookie-more">Saber mais</a>
     </p>
     <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
   </div>
 </div>
 <script defer src="/js/cookies.js"></script>
-
   <script defer src="/js/app.js"></script>
 </body>
 </html>
