Update index.html tentativa cooki

--- a/politica-privacidade/index.html
+++ b/politica-privacidade/index.html
@@ -169,7 +169,6 @@
   </footer>
 
   <!-- (Opcional) Banner de cookies, caso uses /js/cookies.js nesta página -->
-  <!--
   <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
     <div class="cookie-inner">
       <p class="cookie-text">
@@ -179,11 +178,10 @@
       <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
     </div>
   </div>
-  -->
 
   <!-- Scripts -->
   <!-- Mantém apenas o que usas. Se tiveres o banner de cookies aqui, inclui também /js/cookies.js -->
-  <!-- <script defer src="/js/cookies.js"></script> -->
+  <script defer src="/js/cookies.js"></script>
   <script defer src="/js/app.js"></script>
 </body>
 </html>
