Update 404.html tentativa

--- a/404.html
+++ b/404.html
@@ -53,9 +53,10 @@
       </p>
 
       <div style="margin-top:28px; display:flex; gap:10px; justify-content:center; flex-wrap:wrap;">
-        <a class="btn" href="sobre.html">Sobre</a>
-        <a class="btn" href="galeria.html">Galeria</a>
-        <a class="btn" href="contactos.html">Contactos</a>
+        <a class="btn" href="/sobre/">Sobre</a>
+        <a class="btn" href="/galeria/">Galeria</a>
+        <a class="btn" href="/contactos/">Contactos</a>
+        <a class="btn" href="/reservas/">Reservas</a>
       </div>
     </div>
   </main>
@@ -82,7 +83,7 @@
     <div class="cookie-inner">
       <p class="cookie-text">
         Usamos cookies apenas para garantir o bom funcionamento do site.
-        <a href="politica-privacidade.html">Saiba mais</a>
+        <a href="/cookies/">Saiba mais</a>
       </p>
       <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
     </div>
