--- a/contactos/index.html
+++ b/contactos/index.html
@@ -101,7 +101,7 @@
     <div class="cookie-inner">
       <p class="cookie-text">
         Usamos cookies apenas para garantir o bom funcionamento do site.
-        <a href="/politica-privacidade/">Saiba mais</a>
+        <a href="/cookies/">Saiba mais</a>
       </p>
       <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
     </div>
