--- a/cookies/index.html
+++ b/cookies/index.html
@@ -6,6 +6,9 @@
   <title>Política de Cookies · Quinta dos Avós Lourenço</title>
   <meta name="description" content="Política de Cookies da Quinta dos Avós Lourenço. Saiba como usamos cookies para garantir o bom funcionamento do site.">
 
+    <!-- 👇 Não indexar no motor de busca -->
+  <meta name="robots" content="noindex, nofollow">
+  
   <!-- ✅ CSP alinhada com o site -->
   <meta http-equiv="Content-Security-Policy"
         content="
