--- a/politica-privacidade/index.html
+++ b/politica-privacidade/index.html
@@ -6,6 +6,9 @@
   <title>Política de Privacidade · Quinta dos Avós Lourenço</title>
   <meta name="description" content="Política de Privacidade da Quinta dos Avós Lourenço (RGPD). Informação sobre tratamento de dados pessoais, cookies e direitos dos titulares.">
 
+     <!-- 👇 Não indexar no motor de busca -->
+  <meta name="robots" content="noindex, nofollow">
+  
   <!-- ✅ CSP alinhada com o site -->
   <meta http-equiv="Content-Security-Policy"
         content="
