--- a/termos-e-condicoes/index.html
+++ b/termos-e-condicoes/index.html
@@ -6,6 +6,9 @@
   <title>Termos e Condições · Quinta dos Avós Lourenço</title>
   <meta name="description" content="Termos e Condições de reserva e utilização do alojamento Quinta dos Avós Lourenço (AL 135447/AL).">
 
+     <!-- 👇 Não indexar no motor de busca -->
+  <meta name="robots" content="noindex, nofollow">
+  
   <!-- ✅ CSP alinhada com o site -->
   <meta http-equiv="Content-Security-Policy"
         content="
