--- a/404.html
+++ b/404.html
@@ -7,6 +7,9 @@
   <meta name="robots" content="noindex, nofollow">
   <meta name="description" content="A página que procura não existe ou foi movida.">
 
+     <!-- 👇 Não indexar no motor de busca -->
+  <meta name="robots" content="noindex, nofollow">
+  
   <!-- ✅ Políticas de segurança -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
